--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="build/styles/main.css">
   <title>Página do Cleitin</title>
 </head>
 <body>
+  <div class="container">
   <header>
-    <img src="https://via.placeholder.com/200x200">
-    <h1>Pagina do Cleitin</h1>
-    <h2>DEV FRONT END</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam unde eius tempore, asperiores delectus soluta inventore blanditiis rem molestiae sint, rerum minima.</p>
-    <nav>
-      <ul>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Linkedin</a></li>
-        <li><a href="">Github</a></li>
-        <li><a href="">E-mail</a></li>
-      </ul>
-    </nav>
+      <img class="profile-avatar" src="https://via.placeholder.com/120x120">
+      <div class="profile-bio">
+        <h1 class="profile-bio-name">Pagina do Cleitin</h1>
+        <h2 class="profile-bio-subtitle">DEV FRONT END</h2>
+        <p class="profile-bio-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam unde eius tempore, asperiores delectus soluta inventore blanditiis rem molestiae sint, rerum minima.</p>
+      </div>
   </header>
+  
+  <nav>
+    <ul>
+      <li><a href="">Instagram</a></li>
+      <li><a href="">Linkedin</a></li>
+      <li><a href="">Github</a></li>
+      <li><a href="">E-mail</a></li>
+    </ul>
+  </nav>
+</div>
 </body>
 </html>
