--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
   
   <nav>
     <ul>
-      <li><a href="">Instagram</a></li>
-      <li><a href="">Linkedin</a></li>
-      <li><a href="">Github</a></li>
-      <li><a href="">E-mail</a></li>
+      <li><a href="">
+        <img src="src/images/instagram.svg" alt="">
+      </a></li>
+      <li><a href="">
+        <img src="src/images/linkedin.svg" alt="">
+      </a></li>
+      <li><a href="">
+        <img src="src/images/github.svg" alt="">
+      </a></li>
+      <li><a href="">
+        <img src="src/images/mail.svg" alt="">
+      </a></li>
     </ul>
   </nav>
 </div>
