--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <img class="profile-avatar" src="https://via.placeholder.com/120x120">
       <div class="profile-bio">
         <h1 class="profile-bio-name">Pagina do Cleitin</h1>
-        <h2 class="profile-bio-subtitle">DEV FRONT END</h2>
+        <h2 class="profile-bio-subtitle">Desenvolvedor Front-End</h2>
         <p class="profile-bio-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam unde eius tempore, asperiores delectus soluta inventore blanditiis rem molestiae sint, rerum minima.</p>
       </div>
   </header>
   
   <nav>
-    <ul>
+    <ul class="social-links">
       <li><a href="">
         <img src="src/images/instagram.svg" alt="">
       </a></li>
