--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
   <div class="container">
   <header>
-      <img class="profile-avatar" src="https://via.placeholder.com/120x120">
+      <img class="profile-avatar" src="src/images/perfil.jpeg">
       <div class="profile-bio">
-        <h1 class="profile-bio-name">Pagina do Cleitin</h1>
+        <h1 class="profile-bio-name">Cleiton Lahm</h1>
         <h2 class="profile-bio-subtitle">Desenvolvedor Front-End</h2>
-        <p class="profile-bio-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam unde eius tempore, asperiores delectus soluta inventore blanditiis rem molestiae sint, rerum minima.</p>
+        <p class="profile-bio-description">Olá!😊 Me chamo Cleiton Lahm e sou um programador apaixonado pelo desenvolvimento de sistemas e atualmente estou cursando Análise e Desenvolvimento de Sistemas. Além disso, estou aprimorando minhas habilidades em Front-End através de alguns cursos específicos.</p>
       </div>
   </header>
   
@@ -34,6 +34,26 @@
       <li><a href="">
         <img src="src/images/mail.svg" alt="">
       </a></li>
+    </ul>
+  </nav>
+
+  <nav>
+    <ul class="projects-list">
+      <li class="projects-list-item">
+        <a href="">
+          Visite o projeto "Calculadora de medias"
+        </a>
+      </li>
+      <li class="projects-list-item">
+        <a href="">
+          Visite o projeto "Games Shop"
+        </a>
+      </li>
+      <li class="projects-list-item">
+        <a href="">
+          Visite o projeto "Galeria de fotos"
+        </a>
+      </li>
     </ul>
   </nav>
 </div>
