--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
   
   <nav>
     <ul class="social-links">
-      <li><a href="">
+      <li><a href="https://www.instagram.com/clei_lahmm/" target="_blank">
         <img src="src/images/instagram.svg" alt="">
       </a></li>
-      <li><a href="">
+      <li><a href="https://www.linkedin.com/in/cleitonlahm/" target="_blank">
         <img src="src/images/linkedin.svg" alt="">
       </a></li>
-      <li><a href="">
+      <li><a href="https://github.com/CleitonLahm" target="_blank">
         <img src="src/images/github.svg" alt="">
       </a></li>
-      <li><a href="">
+      <li><a href="cleijllahm@gmail.com" target="_blank">
         <img src="src/images/mail.svg" alt="">
       </a></li>
     </ul>
@@ -40,18 +40,18 @@
   <nav>
     <ul class="projects-list">
       <li class="projects-list-item">
-        <a href="">
+        <a href="https://github.com/CleitonLahm/calculadora_de_medias" target="_blank">
           Visite o projeto "Calculadora de medias"
         </a>
       </li>
       <li class="projects-list-item">
-        <a href="">
+        <a href="https://github.com/CleitonLahm/site_gamesshop" target="_blank">
           Visite o projeto "Games Shop"
         </a>
       </li>
       <li class="projects-list-item">
-        <a href="">
-          Visite o projeto "Galeria de fotos"
+        <a href="https://github.com/CleitonLahm/Bikcraft" target="_blank">
+          Visite o projeto "Bikraft"
         </a>
       </li>
     </ul>
